WebSockets checked ✅ & GraphQL pending ❓

--- a/websockets/public/index.html
+++ b/websockets/public/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express, GraphQL, WebSocket App</title>
+    <title>Websockets</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"
-            integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="app.js"></script>
 </head>
+
 <body>
-    <form id="messageForm">
-        <input type="text" id="messageInput" placeholder="Your message">
-        <button type="submit">Send</button>
+    <form>
+        <input type="text" placeholder="Your message">
+        <button>Send</button>
     </form>
-    <ul id="messageList"></ul>
+    <ul></ul>
 </body>
+
 </html>
